# ChartPDS

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  deny.toml
.cargo/: config.toml
.github/: allowed_signers
.sqlx/: query-0275f62c55ffbf0b45d8b9df9b27607d8f0795f52cdc862b306fc9706dcd19f5.json  query-02c9bf4b7fe86d2f349540c868afb62eb3d0c6841fff61f11d6796ee4fb18dbe.json  query-0756ded4341c084ed499ff1bc52b1541a9a1859e65a3d37e41cfa03e41de13f2.json  query-08660d87956ae29a7cebe3948bc43efbb6c321d776c1b5542499c70eeb7aff88.json  query-10627aabd17e41f68b570a1b50f88c3544b4f17b6302d2c2d41fab2c59a3df44.json  query-131ef333a52bc91d0ef7c4bb3440ceec43154831916117c88628f7c35e545ee6.json  query-16e8059d2762e1ea51af8f7bcf445b20ef004a27d4596665671dba71445a26ef.json  query-2aedb30c90809a35ef5fb7a45c32a777dcb676b91463ec1724221d13472165b0.json  query-2dda39df026192fec57a41fae2e3df3be5428a03ee2c1d3f15bb50b322bd71f7.json  query-2ec9a6f3b915ffb8f6957b8e821b3e7462781df30f0aad27104342fa218f8b4e.json  query-2fdc9086b7f945c610643e86e381f644a59fac94cf3cffba5cfd49a14c759fca.json  (+49 more)
crates/chartpds-core/: Cargo.toml
crates/chartpds-core/migrations/: 0000_init.sql  0001_source_documents.sql  0002_observations.sql  0003_problems.sql  0004_medications.sql  0005_source_credentials.sql  0006_source_state.sql  0007_source_day_state.sql  0008_notification_state.sql  0009_notification_log.sql  0010_rename_archived_at.sql  0011_source_document_date.sql  0012_frontier_last_advanced_at.sql  0013_narrative_texts.sql
crates/chartpds-core/src/: lib.rs
crates/chartpds-core/src/archive/: error.rs  key.rs  manifest.rs  mod.rs  store.rs
crates/chartpds-core/src/clinical/: aasm.rs  catalog.rs  coding.rs  kind_registry.rs  mod.rs
crates/chartpds-core/src/extraction/: artifact.rs  error.rs  llm.rs  mod.rs  pdf.rs  verify.rs
crates/chartpds-core/src/index/: clear.rs  medications.rs  migrations.rs  mod.rs  narrative_texts.rs  notification_log.rs  notification_state.rs  observations.rs  pool.rs  problems.rs  source_credentials.rs  source_day_state.rs  source_documents.rs  source_state.rs
crates/chartpds-core/src/ingestion/: error.rs  ingest.rs  mod.rs  narrative.rs  rebuild.rs
crates/chartpds-core/src/ingestion/ccda/: medications.rs  mod.rs  parse.rs  problems.rs  results.rs  self_check.rs  time.rs  vitals.rs
crates/chartpds-core/src/ingestion/ccda/fixtures/: not_ccda.xml  valid_minimal.xml
crates/chartpds-core/src/notifications/: dispatch.rs  evaluator.rs  mod.rs
crates/chartpds-core/src/queries/: aligned_table.rs  counts_per_code.rs  current_medications.rs  current_problems.rs  day_confidence.rs  duration_in_value_range.rs  episodes.rs  get_narrative.rs  in_range.rs  latest_by_code.rs  latest_by_coding.rs  list_medications.rs  list_notifications.rs  list_problems.rs  longest_continuous_in_value_range.rs  mod.rs  observation_history.rs  observation_stats.rs  search_narratives.rs  signal_relationship.rs  test_support.rs
crates/chartpds-core/src/sources/: confidence.rs  error.rs  mod.rs  oauth.rs  source_trait.rs
crates/chartpds-core/src/sources/fitbit/: api.rs  confidence.rs  mod.rs  parser.rs  storage.rs  sync.rs
crates/chartpds-core/src/sources/oura/: api.rs  confidence.rs  mod.rs  parser.rs  sleep_stage.rs  storage.rs  sync.rs
crates/chartpds-core/src/sync/: daemon.rs  mod.rs  tick.rs
crates/chartpds-mcp/: Cargo.toml
crates/chartpds-mcp/src/: config.rs  main.rs  oauth_callback.rs  server.rs
holdout/: Cargo.toml
holdout/fixtures/: diabetes_minimal.xml  observation_stats_vitals.xml  relationship_vitals.xml  spearman_vitals.xml
holdout/src/: lib.rs  mock_llm.rs
holdout/tests/: aligned_table.rs  clinical_lists.rs  episode_bucketing.rs  fitbit_confidence.rs  fitbit_hr_dedup.rs  intraday_hour_bucketing.rs  narrative_llm.rs  narrative_pdf.rs  observation_stats.rs  signal_relationship.rs  spearman_relationship.rs
scripts/: forbid-junk-types.sh  holdout-hashes.sh  (+3 more)
(+24 files in other folders)
