[package]
name = "chartpds-holdout"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Black-box holdout regression suite for ChartPDS (tamper-resistant integration tests driven against the chartpds-mcp binary over stdio)"

[lints]
workspace = true

[dependencies]
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "net", "io-util"] }
