[package]
name = "chartpds-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "ChartPDS core library: archive, ingestion, index, sources, sync, notifications"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
jiff = { version = "0.2", default-features = false, features = ["std", "tzdb-bundle-always"] }
reqwest = { workspace = true }
roxmltree = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
pdf-extract = "0.12"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
